feat: Improve asset path handling and add SEO schema
Update the `index.html` comment to clarify the use of relative paths for better understanding in sub-path deployments, specifically on GitHub Pages.

Enhance the JSON-LD schema in `App.tsx` by adding the `url` property to the `FAQPage` schema. This improves SEO by explicitly defining the canonical URL for the FAQ content.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
-    <!-- 使用相对路径 index.tsx 确保在子路径 pa-exam 下能正确加载 -->
+    <!-- 使用相对路径 index.tsx 确保在 GitHub Pages 的子路径 /pa-exam/ 下能正确加载 -->
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
