--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
     <!-- 使用相对路径 index.tsx 确保在 GitHub Pages 的子路径 /pa-exam/ 下能正确加载 -->
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
