--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <meta name="description" content="提供2026年上半年职场管理员资格认证考试最新模拟试卷，包含单选、多选、判断题型及详细解析。支持云端同步与Excel下载，助力快速备考。" />
     <meta name="keywords" content="职场管理员考试, 2026职场管理员认证, 职场管理员模拟卷, 平安职场管理, 考试助手, 题库查询" />
     <meta name="author" content="职场管理员助手" />
-    <link rel="canonical" href="https://jue.sh/pa-exam/" />
+    <link rel="canonical" href="https://pa.jue.sh/" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jue.sh/pa-exam/" />
+    <meta property="og:url" content="https://pa.jue.sh/" />
     <meta property="og:title" content="2026上半年职场管理员资格认证考试模拟卷" />
     <meta property="og:description" content="在线刷题、查看解析、云端同步。最新职场管理员考试备考神器。" />
-    <meta property="og:image" content="https://jue.sh/pa-exam/og-image.png" />
+    <meta property="og:image" content="https://pa.jue.sh/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://jue.sh/pa-exam/" />
+    <meta property="twitter:url" content="https://pa.jue.sh/" />
     <meta property="twitter:title" content="2026上半年职场管理员资格认证考试模拟卷" />
     <meta property="twitter:description" content="专业职场管理员备考工具，包含完整解析与云端同步功能。" />
 
@@ -41,7 +41,7 @@
   </head>
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
-    <!-- 使用相对路径 index.tsx 确保在 GitHub Pages 的子路径 /pa-exam/ 下能正确加载 -->
+    <!-- 使用相对路径 index.tsx 确保在不同环境（如自定义域名或 GitHub Pages）下均能正确加载 -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
